--- a/app/css/critical.css
+++ b/app/css/critical.css
@@ -2,3 +2,14 @@
     margin: 0;
     padding: 0;
 }
+
+body::-webkit-scrollbar {
+display: none;
+}
+body::-webkit-scrollbar-thumb {
+display: none;
+}
+
+body::-webkit-scrollbar-track {
+display: none;
+}
